--- a/package.json
+++ b/package.json
@@ -15,7 +15,16 @@
     "react-router-dom": "^6.0.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^3.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "loader-utils": ">=1.4.2",
+    "shell-quote": ">=1.7.3",
+    "immer": ">=9.0.6",
+    "minimatch": ">=3.0.5",
+    "terser": ">=4.8.1",
+    "node-forge": ">=1.3.0",
+    "ansi-html": ">=0.0.8",
+    "glob-parent": ">=5.1.2",
+    "serialize-javascript": ">=3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,7 +34,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  
+
   "eslintConfig": {
     "extends": [
       "react-app",
